<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trânsito Rio</string>
    <string name="ADMOB_ID">ca-app-pub-8480635244406174/9099196694</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="cancel">Cancelar</string>
    <string name="example_news_title">Depois do protesto, manhã de limpeza e policiamento reforçado no Palácio Guanabara</string>
    <string name="example_published_at">10/09/13 10:13</string>
    <string name="example_tweet_title">Centro de Operações</string>
    <string name="example_tweet_text">Acidente desfeito na segunda galeria do tunel Rebouças, sentido Praça da Bandeira. Trânsito segue intenso no local.</string>
    <string name="example_tweet_published_at">3m</string>

    <!-- LIST -->
    <string name="empty_list"><![CDATA[Não há informações disponíveis nesse momento.]]></string>

    <!-- LOADING -->
    <string name="loading"><![CDATA[Carregando...]]></string>

    <!-- INTERNET FAILURE -->
    <string name="internet_failure">Verique sua conexão de internet ou tente novamente mais tarde.</string>
    <string name="internet_failure_try_again">Tentar Novamente</string>

    <!-- MENU -->
    <string name="menu_share">compartilhar</string>
    <string name="menu_refresh_list">atualizar</string>
    <string name="menu_telephone_call">ligar</string>
    <string name="description_image_blur_fragment">blur por cima do conteudo</string>
    <string name="title_activity_settings">Configurações</string>

    <!-- MENU DE CONFIGURACAO -->
    <string name="menu_config_information_problem">Informe um problema</string>
    <string name="menu_config_review">Avalie o aplicativo</string>
    <string name="menu_config_share_app_for_android">Compartilhe o aplicativo</string>

    <!-- INFORMAR UM PROBLEMA -->
    <string name="information_problem_to">cinelandia.supporte@gmail.com</string>
    <string name="information_problem_subject">[Android] Trânsito Rio - Informe um problema</string>

    <!-- EMAIL APP -->
    <string name="email_app_subject">Conheça o Trânsito Rio para Android</string>
    <string name="email_app_text">Baixe de graça o aplicativo do Trânsito Rio para Android e ganhe tempo no trânsito.\n\n%s</string>

    <!-- SLIDING MENU -->
    <string name="traffic">Trânsito</string>
    <string name="ponte">Ponte Rio-Niterói</string>
    <string name="users">Contas do Twitter</string>
    <string name="novadutra">Nova Dutra</string>
    <string name="rodoviadoslagos">Via Lagos</string>
    <string name="telefones_uteis">Telefones Úteis</string>

    <!-- RODOVIAS TELS -->
    <string name="ponte_tel">0800 022 9333</string>
    <string name="novadutra_tel">0800 017 3536</string>
    <string name="rodoviadoslagos_tel">0800 702 0124</string>
    <string name="title_activity_tweets_from_user">TweetsFromUserActivity</string>
    <string name="action_settings">Settings</string>

</resources>