<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_default"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/adapter_twitter_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/traffic" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="3dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/adapter_twitter_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_tweet_title"
                android:textColor="@color/black"
                android:textIsSelectable="true"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/adapter_twitter_published_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:textColor="@color/top_text_second"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/adapter_twitter_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:text="@string/example_tweet_text" />
    </LinearLayout>

</LinearLayout>